--- a/src/app/shop/shop-item-form/shop-item-form.component.css
+++ b/src/app/shop/shop-item-form/shop-item-form.component.css
@@ -1,7 +1,7 @@
-.ng-valid[required] {
+input.ng-valid[required] {
   border-left: 5px solid #42A948; /* green */
 }
 
-.ng-invalid {
+input.ng-invalid {
   border-left: 5px solid #a94442; /* red */
 }
