added reviews count

--- a/src/app/shop/shop-item-detail/shop-item-detail.component.html
+++ b/src/app/shop/shop-item-detail/shop-item-detail.component.html
@@ -33,7 +33,7 @@
                 <p>{{ shopItem.description }}</p>
             </div>
             <div class="ratings">
-                <p class="pull-right">3 reviews</p>
+                <p class="pull-right">{{ reviewsCount }} reviews</p>
                 <p>
                     <span class="glyphicon glyphicon-star"></span>
                     <span class="glyphicon glyphicon-star"></span>
