--- a/src/app/shop/shop-item-list/shop-item-list.component.html
+++ b/src/app/shop/shop-item-list/shop-item-list.component.html
@@ -35,7 +35,7 @@
                         <p>See more snippets like this online store item at <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp - http://bootsnipp.com</a>.</p>
                     </div>
                     <div class="ratings">
-                        <p class="pull-right">15 reviews</p>
+                        <p class="pull-right">{{cartItemReviews[shopItem.id]}} reviews</p>
                         <div class="crop">
                             <div style="width: 86px">
                                 <span class="glyphicon glyphicon-star"></span>
