added initial tests

--- a/src/app/shop/shop-item-list/shop-item-list.component.html
+++ b/src/app/shop/shop-item-list/shop-item-list.component.html
@@ -27,7 +27,7 @@
                     <img src="http://placehold.it/320x150" alt="">
                     <div class="caption">
                         <h4 class="pull-right">${{shopItem.unitPrice}}</h4>
-                        <h4>{{shopItem.name}}
+                        <h4 id='shopItem{{shopItem.id}}Title'>{{shopItem.name}}
                           <a data-toggle="modal" href="#{{shopItem.id}}">
                             <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                           </a>
