--- a/src/app/shop/shop-item-detail/shop-item-detail.component.html
+++ b/src/app/shop/shop-item-detail/shop-item-detail.component.html
@@ -61,11 +61,11 @@
                 <div class="row">
                   <div class="col-xs-12 col-md-8">
                     <div class="form-group">
-                        <textarea class="form-control" id="remarks" #remarks placeholder="Enter comment message" [(ngModel)]="reviewText" [ngModelOptions]="{standalone: true}"></textarea>
+                        <textarea class="form-control" id="remarks" #remarks placeholder="Enter comment message" [(ngModel)]="reviewText" [ngModelOptions]="{standalone: true}" [disabled]='!auth.isLoggedIn()'></textarea>
                     </div>
                   </div>
                 <div class="col-md-2">
-                    <button type="submit" class="btn btn-success">Submit Review</button>
+                    <button type="submit" class="btn btn-success" [disabled]='!auth.isLoggedIn()'>Submit Review</button>
                 </div>
                 </div>
               </form>
