--- a/src/app/shop/shop-item-list/shop-item-list.component.html
+++ b/src/app/shop/shop-item-list/shop-item-list.component.html
@@ -38,11 +38,7 @@
                         <p class="pull-right">{{cartItemReviews[shopItem.id]}} reviews</p>
                         <div class="crop">
                             <div style="width: 86px">
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
+                                <p-rating [(ngModel)]="shopItem.rating" [cancel]="false" readonly="true"></p-rating>
                             </div>
                         </div>
                     </div>
