removed unneeded input property

--- a/src/app/shop/shop-item-form/shop-item-form.component.html
+++ b/src/app/shop/shop-item-form/shop-item-form.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id={{modalId}} tabindex="-1" role="dialog" aria-labelledby="shopItemModalLabel">
+<div class="modal fade" [attr.id]="shopItem ? shopItem.id : 'shopItemModal'" tabindex="-1" role="dialog" aria-labelledby="shopItemModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
